--- a/style.css
+++ b/style.css
@@ -8,3 +8,20 @@
     display: inline-block;
     border-radius: 65% 10% 60% 40%;
 }
+.pixel{
+    width: 40px;
+    height: 40px;
+    border: 1px solid black;
+    display: inline-block;
+    margin: -2px;
+    text-align: center;
+}
+
+#pixel-board{
+    border: 1px solid red;
+    height: 208px;
+    width: 208px;
+    text-align: center;
+    padding: 10px;
+}
+
