--- a/style.css
+++ b/style.css
@@ -1,27 +1,25 @@
 * {
     margin:  0;
 }
+
 .color{
-    width: 40px;
-    height: 40px;
+    width: 50px;
+    height: 50px;
     border: 1px solid black;
     display: inline-block;
-    border-radius: 65% 10% 60% 40%;
+    border-radius: 65% 25% 60% 40%;
 }
 .pixel{
     width: 40px;
     height: 40px;
     border: 1px solid black;
     display: inline-block;
+    background-color: white;
     margin: -2px;
-    text-align: center;
+    
 }
 
 #pixel-board{
-    border: 1px solid red;
-    height: 208px;
-    width: 208px;
-    text-align: center;
-    padding: 10px;
+    width: 230px;
 }
 
